@@ -16,7 +16,7 @@ robinCompareFastWeight(
   FUN2 = NULL,
   measure = c("vi", "nmi", "split.join", "adjusted.rand"),
   verbose = TRUE,
-  dist = "NegBinom",
+  dist = "Other",
   BPPARAM = BiocParallel::bpparam()
 )
 }
@@ -51,7 +51,8 @@ see \code{\link{methodCommunity}}.}
 
 \item{dist}{Option to rewire in a manner that retains overall graph weight 
 regardless of distribution of edge weights. This option is invoked by putting 
-any text into this field. Defaults to "NegBinom" for negative binomial.}
+any text into this field. Defaults to "Other". See
+  \code{\link[perturbR]{rewireR}} for details.}
 
 \item{BPPARAM}{the BiocParallel object of class \code{bpparamClass} that 
 specifies the back-end to be used for computations. See
